# umabuild

./: .gitignore  LICENSE  README.md  pyproject.toml
example/: .gitignore  README.md  USAGE.md
src/umabuild/: cli.py
src/umabuild/core/: doctor.py  generator.py  patcher.py  runner.py  workspace.py
src/umabuild/core/llm/: base.py  openai_provider.py
tests/: test_generator.py  test_patcher.py  test_workspace.py
